--- a/FRONT/css/base.css
+++ b/FRONT/css/base.css
@@ -17,7 +17,7 @@ html {
   margin:0;
   padding:0;
   background-color: white;
-  background-image:url('Images/export-bg-circles-fade.png');
+  background-image:url('../Images/export-bg-circles-fade.png');
   background-size: 350px;
   background-size: cover;
 }
