--- a/css/404.css
+++ b/css/404.css
@@ -62,6 +62,15 @@
   font-weight: bold;
 }
 
+.titre
+{
+  padding-top: 10vh;
+  text-align: center;
+  color: #03B898;
+  font-size: 2em;
+  font-weight: bold;
+}
+
 .divDescription
 {
   padding-top: 2vh;
@@ -90,7 +99,7 @@
 {
   font-size: 2em;
   font-weight: bold;
-  margin-top: 5vh;
+  margin-top: 8vh;
   text-align: center;
   color: #03B898;
 }
@@ -99,6 +108,111 @@ a
 {
   text-decoration: none;
   color: white;
+}
+
+.buttonRetour
+{
+  position: absolute;
+  top: 5vh;
+  left: 5vh;
+  height: : 50vh;
+  width: 50vh;
+}
+
+.divSection
+{
+  margin-top: 3vh;
+  background-color: white;
+  border-radius: 20px;
+  width: 100%;
+  box-shadow: 1px 1px 12px #555;
+  padding: 0.5em;
+}
+
+.divTextSection
+{
+  padding-top: 0.5em;
+  color: #03B898;
+  font-size: 1.5em;
+}
+
+.divInputSection
+{
+  font-size: 10px;
+  color: #cccccc;
+  text-align: left;
+}
+
+.divTextSujet
+{
+  padding-top: 0.5em;
+  color: #cccccc;
+  font-size: 1em;
+}
+
+.divSujet
+{
+  border-radius: 30px;
+  padding: 0.5em;
+  text-align: center;
+}
+
+td
+{
+  padding:0em;
+}
+
+.divDesSujets
+{
+  padding-top: 1em;
+  color: white;
+  text-align: -webkit-center;
+}
+
+.buttonEnvoyer
+{
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 5vh;
+  width: 40vh;
+  min-height: 30px;
+  background-color: #03B898;
+  border-radius: 20px;
+
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+input
+{
+  width: 100%;
+  min-height: 30px;
+  border-radius: 10px;
+  border: 1px solid #03B898;
+}
+
+label
+{
+  font-size: 20px;
+  color: black;
+  text-align: left;
+
+}
+
+.checkbox
+{
+  width: 4vh;
+  text-align: left;
+}
+
+textarea
+{
+  width: 100%;
+  min-height: 200px;
+  border-radius: 10px;
+  border: 1px solid #03B898;
 }
 
 /* For mobile phones: */
