--- a/css/inscription.css
+++ b/css/inscription.css
@@ -41,6 +41,7 @@ body {
   padding-top: 7vh;
   text-align: center;
   color: white;
+  font-family: Goldplay;
 }
   #ecran {
       width: 100vw;
@@ -58,6 +59,7 @@ body {
   width: 80%;
   box-shadow: 1px 1px 12px #555;
   padding: 0.5em;
+  font-family: Goldplay;
 }
 
 label {
@@ -83,11 +85,13 @@ label {
   text-align: center;
   vertical-align: middle;
   font-size: 20px;
+  font-family: Goldplay;
   
 }
 #bouttonDemarrerBis{
   visibility: hidden;
   color: white;
+  font-family: Goldplay;
 }
 #textBoutton{
   visibility: visible;
